tolk-tester/tests/invalid-declaration/err-1388.tolk
fun main() {
}

fun onInternalMessage(in: InMessage) {
}

/**
@compilation_should_fail
@stderr both `main` and `onInternalMessage` are not allowed
 */
